charts/jiva-w/1.0/templates/jiva-w.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
  generation: 1
  labels:
    io.kompose.service: jiva-w
  name: jiva-w
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: jiva-w
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: jiva-w
    spec:
      containers:
      - args:
        - sudo chown -R mgeweb:mgeweb /home/mgeweb/sankhyaw-dpm/ /home/mgeweb/SankhyaW/Anexos
          /home/mgeweb/repositorio /home/mgeweb/pacotes-sannfe/ && /home/mgeweb/DPM/scripts/./wildfly.sh
          ; java -jar /home/mgeweb/DPM/docker-package-manager.jar ; /home/mgeweb/DPM/scripts/./sannfe.sh;
          sudo chown -R mgeweb:mgeweb /home/mgeweb/SanNFe /home/mgeweb/wildfly_producao/standalone/log
          && /home/mgeweb/DPM/scripts/./visualvm.sh && sleep 10  && sed -i 's/<min-pool-size>100</<min-pool-size>10</g'
          /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && sed -i
          's/<max-pool-size>100</<max-pool-size>50</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml
          && sleep 15; nohup /home/mgeweb/DPM/scripts/./sentry 2>&1 </dev/null & sleep
          5 && echo 'y' && sleep 30 ; /home/mgeweb/wildfly_producao/bin/./standalone.sh
          -Djape.lazy.init=true -Djape.lob.fields.as.lazy=true -Djape.ignore.ligacao.inconsistente=true
        command:
        - /bin/sh
        - -c
        image: highlanderdantas/snk-jiva-w:v1.4
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 100
          periodSeconds: 60
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 60
        name: jiva-w
        ports:
        - containerPort: 8080
          hostPort: 9990
          name: 8080tcp99900
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 100
          periodSeconds: 60
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 60
        resources:
          limits:
            memory: 1536Mi
          requests:
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities: {}
          privileged: true
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/mgeweb/repositorio
          name: sanesocial-claim0
          subPath: pacotes/repositorio/
        - mountPath: /home/mgeweb/wildfly_producao/standalone/log
          name: sanesocial-claim0
          subPath: highlander/logs/
        - mountPath: /home/mgeweb/SanNFe
          name: sanesocial-claim0
          subPath: highlander/SanNFe/
        - mountPath: /home/mgeweb/SankhyaW/Anexos
          name: sanesocial-claim0
          subPath: highlander/Anexos/
        - mountPath: /home/mgeweb/pacotes-sannfe/
          name: sanesocial-claim0
          subPath: highlander/pacotes/sannfe/
        - mountPath: /home/mgeweb/sankhyaw-dpm/pkgs
          name: sanesocial-claim0
          subPath: highlander/jiva-w/
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
      volumes:
      - name: sanesocial-claim0
        persistentVolumeClaim:
          claimName: sanesocial-claim0
status: {}
