charts/jiva-w/1.0/templates/sanesocial-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sanesocial
  name: sanesocial
spec:
  ports:
  - name: "9970"
    port: 9970
    protocol: TCP
    targetPort: 8778
  selector:
    io.kompose.service: sanesocial
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
